2003-05-14  Sam Steingold  <sds@gnu.org>

	stdio handles are now duped before being inserted into LISP
	streams, so they are never closed on user request
	* stream.d (handle_to_stream): new function
	(make_standard_input, make_standard_output): new macro
	(make_terminal_io, init_standard_io): use them
	(init_streamvars): use handle_to_stream()

2003-05-14  Sam Steingold  <sds@gnu.org>

	* pathname.d (handle_dup): new global function
	(LAUNCH, DUPLICATE-HANDLE): use it
	* lispbibl.d (handle_dup1): new macro

2003-05-14  Sam Steingold  <sds@gnu.org>

	* constobj.d (type_priority) [WIN32_NATIVE]: added
	* pathname.d (LAUNCH) [WIN32_NATIVE]: use it (GC-safety bug fix!)
	(allocate_cons_v): removed
	* error.d (fehler_key_odd): fixed a GC-safety bug

2003-05-14  Bruno Haible  <bruno@clisp.org>

	* compiler.lisp: BLOCK-OPEN and TAGBODY-OPEN not only have
	undefined values, but invalidate value1 due to consing!
	(traverse-anode): clear the current known value (*current-value*
	and *current-vars*) when encountering BLOCK-OPEN or TAGBODY-OPEN

2003-05-13  Jörg Höhle  <hoehle@users.sourceforge.net>

	* foreign.d (FOREIGN-SIZE): remove unreferenced function

2003-05-12  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (check_uint8, check_sint8, check_uint16, check_sint16)
	(check_uint32, check_sint32, check_uint64, check_sint64, check_uint)
	(check_sint, check_ulong, check_slong, check_ffloat, check_dfloat):
	functions returning the correct argument
	(fehler_uint8, fehler_sint8, fehler_uint16, fehler_sint16)
	(fehler_uint32, fehler_sint32, fehler_uint64, fehler_sint64)
	(fehler_uint, fehler_sint, fehler_ulong, fehler_slong)
	(fehler_ffloat, fehler_dfloat): removed
	* error.d (fehler_uint8, fehler_sint8, fehler_uint16, fehler_sint16)
	(fehler_uint32, fehler_sint32, fehler_uint64, fehler_sint64)
	(fehler_uint, fehler_sint, fehler_ulong, fehler_slong)
	(fehler_ffloat, fehler_dfloat): replaced with check_*()
	* genclisph.d (...): ditto
	* stream.d (rd_by_array_dummy): use check_uint8()